
2020-10-08  Ron Norman <rjn@inglenet.com>

	* cobc.c,cobc.h,typeck.c: When -debug -O compile options 
	   are used then optimize the subscript checks.

2020-10-02  Ron Norman <rjn@inglenet.com>

	* typeck.c: Partial work on optimizing when to check
	   subscripts value. More testing is needed so this
	   is a checkin of the work done so far and is disabled
	   at present.

2020-09-30  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: fixed inclusion of libsupport
	* cobc.h: include gettext without lib prefix

2020-09-29  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_print_info): adjusted version output for JSON and MPIR
	* typeck.c: adjusted check of defines for JSON

2020-09-04  Ron Norman <rjn@inglenet.com>

	* codegen.c: emit runtime checks to IF conditions for
	  reference modification being out of bounds

2020-08-28  Ron Norman <rjn@inglenet.com>

	* codegen.c: Changes for UNBOUNDED OCCURS
	* typeck.c (cb_emit_move): Changes for UNBOUNDED OCCURS

2020-07-26  Edward Hart <edward.dan.hart@gmail.com>

	* config.def: added possible values for assign-clause and
	  screen-section-rules.

2020-07-19  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.c, typeck.c: added support for JSON-C as JSON handler.

2020-07-17  Edward Hart <edward.dan.hart@gmail.com>

	* config.c, config.def, cobc.h, typeck.c: added dpc-in-data conf option.
	* pplex.l, ppparse.y: added corresponding SET DPC-IN-DATA directive.
	* scanner.l: add EQUALS as alias for EQUAL in conditions (bug #663).
	* typeck.c: fixed segfault with parens around condition word (bug #663).

2020-07-07  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.c, scanner.l: fixed memory issues.

2020-07-05  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y, config.def: added vsam-status config option.

2020-07-03  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (file_status_clause): only ignore VSAM status, pending proper
	  config option.
	* typeck.c: implement syntax rules for FILE STATUS (bug #656), with